--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -15,7 +15,10 @@
 
 		<script src="utils/moneyTests.js" type="module"></script>
 		<script src="data/cartTests.js" type="module"></script>
+		<script src="checkout/orderSummaryTest.js" type="module"></script>
 	</head>
 
-	<body></body>
+	<body>
+		<div class="js-test-container"></div>
+	</body>
 </html>
