--- a/orders.html
+++ b/orders.html
@@ -43,7 +43,7 @@
 
 				<a class="cart-link header-link" href="checkout.html">
 					<img class="cart-icon" src="images/icons/cart-icon.png" />
-					<div class="cart-quantity">3</div>
+					<div class="cart-quantity js-cart-quantity"></div>
 					<div class="cart-text">Cart</div>
 				</a>
 			</div>
@@ -56,6 +56,6 @@
 		</div>
 	</body>
 
-	<script type="module" src="scripts/placeOrders.js"></script>
+	<script type="module" src="./scripts/placeOrderSummary.js"></script>
 </html>
 
